# dotfiles

./: .gitignore  .pre-commit-config.yaml  .vimrc  .zshrc  Brewfile  README.md  bookmarks.html  coc-settings.json  config.toml  gitconfig  init.vim  languages.toml  mcps.md  sval.vil  vimrc  vscode_extensions.txt  zimrc  zprofile  zshrc  zshrc_zim
claude/: CLAUDE.md  settings.json
claude/agents/: code-editor.md  code-reviewer.md  optimization-agent.md  planning-agent.md
claude/commands/: aidev.md  deep-explain.md  explain.md  implement.md  plan.md
claude/dataframely-schema-validation/: SKILL.md  examples.md
helix/: config.toml  languages.toml
helix/themes/: dracula_ray.toml  gruvbox.toml  mine.toml
kitty/: kitty.conf  ssh.conf
nvim/: init.vim
opencode/: opencode.json  plugins.md
pystuff/: main.py  pyproject.toml
rye/: config.toml
shells/: bashrc  zshrc
skeletons/: skeleton.sh
themes/: dracula_ray.toml  mine.toml
vim/vimdir/: .netrwhist
vim/vimdir/skeletons/: skel.py  skel.sql
vimdir/skeletons/: skel.py  skel.sh  skel.sql
